--- a/style.css
+++ b/style.css
@@ -1599,7 +1599,8 @@ body.has-header-image .site-title,
 body.has-header-video .site-title,
 body.has-header-image .site-title a,
 body.has-header-video .site-title a {
-	color: #fff;
+	/* color: #fff; */
+	color: red;
 }
 
 .site-description {
