--- a/style.css
+++ b/style.css
@@ -1600,7 +1600,7 @@ body.has-header-video .site-title,
 body.has-header-image .site-title a,
 body.has-header-video .site-title a {
 	/* color: #fff; */
-	color: red;
+	color: blue;
 }
 
 .site-description {
